@@ -1,3 +1,9 @@
+version <unreleased>
+
+Extractors
+* [parliamentliveuk] Lower case URLs are now recognized (#10912)
+
+
 version 2016.10.12
 
 Core
